--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 .App {
   text-align: center;
-  font-family: 'Roboto Condensed', sans-serif;
-  
+  font-family: 'Roboto Condensed', sans-serif; 
+}
+li{
+  list-style: none;
 }
 
